[gd_scene load_steps=30 format=3 uid="uid://bqg36pt6yfia0"]

[ext_resource type="Script" path="res://scripts/tela_gameplay.gd" id="1_k57ww"]
[ext_resource type="FontFile" uid="uid://vneqrsab2dtf" path="res://sprites/Fonts/Battlenet.ttf" id="2_nxe21"]
[ext_resource type="Texture2D" uid="uid://dw61owhynrmmc" path="res://sprites/Imagens/pixelframenormal.png" id="3_uth28"]
[ext_resource type="Texture2D" uid="uid://q1r8bb5n18j0" path="res://sprites/Imagens/pixeframeinverted.png" id="4_rh00v"]
[ext_resource type="Texture2D" uid="uid://c7piu1s775s8d" path="res://sprites/Imagens/pixil-frame-0 (11).png" id="5_14vy7"]
[ext_resource type="Texture2D" uid="uid://c8taf62cx575x" path="res://sprites/icon.png" id="5_51ttw"]
[ext_resource type="Texture2D" uid="uid://p5e4yjmhbw40" path="res://sprites/Imagens/pixil-frame-0 (10).png" id="6_gwfr3"]
[ext_resource type="Texture2D" uid="uid://dkdql1ch6opst" path="res://sprites/Imagens/pixil-frame-0 (13).png" id="8_ttvuv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwpxj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i8vee"]

[sub_resource type="Theme" id="Theme_bgi7r"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_gwpxj")
VScrollBar/styles/scroll = SubResource("StyleBoxTexture_i8vee")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7df1g"]
texture = ExtResource("3_uth28")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mq2un"]
texture = ExtResource("3_uth28")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ke8jq"]
texture = ExtResource("4_rh00v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hkp4e"]
texture = ExtResource("4_rh00v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tu1v8"]
texture = ExtResource("3_uth28")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1mab8"]
texture = ExtResource("4_rh00v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4na0y"]
texture = ExtResource("4_rh00v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b5k3s"]
texture = ExtResource("3_uth28")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jc20c"]
texture = ExtResource("3_uth28")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_flmjl"]
texture = ExtResource("3_uth28")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vh5ge"]
texture = ExtResource("4_rh00v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gin4k"]
texture = ExtResource("3_uth28")

[sub_resource type="LabelSettings" id="LabelSettings_53ilo"]
font = ExtResource("2_nxe21")
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kttld"]
font = ExtResource("2_nxe21")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8qi80"]
font = ExtResource("2_nxe21")
font_size = 20
font_color = Color(0, 0, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fyfd5"]
font = ExtResource("2_nxe21")
font_size = 25
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mlul8"]
texture = ExtResource("8_ttvuv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l4elv"]
texture = ExtResource("8_ttvuv")

[node name="Tela_gameplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k57ww")

[node name="Cor fundo cinza" type="ColorRect" parent="."]
layout_mode = 0
offset_top = -1.0
offset_right = 790.0
offset_bottom = 502.0
color = Color(0.741385, 0.741385, 0.741385, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 322.0
offset_right = 143.0
offset_bottom = 492.0
theme = SubResource("Theme_bgi7r")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 180.0
offset_right = 108.0
offset_bottom = 217.0
theme_override_colors/font_disabled_color = Color(0.385493, 0.385492, 0.385492, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_nxe21")
theme_override_styles/focus = SubResource("StyleBoxTexture_7df1g")
theme_override_styles/disabled = SubResource("StyleBoxTexture_mq2un")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_ke8jq")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_hkp4e")
theme_override_styles/hover = SubResource("StyleBoxTexture_tu1v8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_1mab8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4na0y")
theme_override_styles/normal = SubResource("StyleBoxTexture_b5k3s")
alignment = 1
item_count = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 221.0
offset_right = 108.0
offset_bottom = 256.0
theme_override_colors/font_disabled_color = Color(0.529067, 0.529067, 0.529067, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_nxe21")
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxTexture_jc20c")
theme_override_styles/hover = SubResource("StyleBoxTexture_flmjl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vh5ge")
theme_override_styles/normal = SubResource("StyleBoxTexture_gin4k")
disabled = true
text = "Responder"

[node name="Cor branca (Descrições)" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 8.0
offset_right = 782.0
offset_bottom = 494.0
color = Color(0.977937, 0.977937, 0.977937, 1)

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.545
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -57.0
offset_right = 332.16
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer2"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer2/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_53ilo")

[node name="Cor branca (Ligações)" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 263.0
offset_bottom = 197.0

[node name="Texto_Ligação" type="ScrollContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = 12.0
offset_right = 251.0
offset_bottom = 188.0

[node name="VBoxContainer" type="VBoxContainer" parent="Texto_Ligação"]
layout_mode = 2

[node name="Label" type="Label" parent="Texto_Ligação/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_kttld")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 187.0
offset_bottom = 168.0

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
offset_left = 5.0
offset_top = 2.0
offset_right = 177.0
offset_bottom = 164.0
text = "Leia atentamente os tipos 
de problemas e compare 
com o que o cliente está 
descrevendo. Após isso, 
escolha o tipo de proble-
ma nas opções abaixo e 
responda."
label_settings = SubResource("LabelSettings_8qi80")

[node name="Lista de problemas" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 285.0
offset_right = 164.0
offset_bottom = 311.0
text = "Lista de Problemas:"
label_settings = SubResource("LabelSettings_fyfd5")

[node name="VScrollBar" type="VScrollBar" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 320.0
offset_right = 127.0
offset_bottom = 494.0
theme_override_icons/increment = ExtResource("5_14vy7")
theme_override_icons/increment_highlight = ExtResource("5_14vy7")
theme_override_icons/increment_pressed = ExtResource("5_14vy7")
theme_override_icons/decrement = ExtResource("6_gwfr3")
theme_override_icons/decrement_highlight = ExtResource("6_gwfr3")
theme_override_icons/decrement_pressed = ExtResource("6_gwfr3")
theme_override_styles/scroll = SubResource("StyleBoxTexture_mlul8")
theme_override_styles/grabber = SubResource("StyleBoxTexture_l4elv")

[node name="VScrollBar2" type="VScrollBar" parent="."]
layout_mode = 0
offset_left = 753.0
offset_top = 192.0
offset_right = 768.0
offset_bottom = 489.0
theme_override_icons/increment = ExtResource("5_14vy7")
theme_override_icons/increment_highlight = ExtResource("5_14vy7")
theme_override_icons/increment_pressed = ExtResource("5_14vy7")
theme_override_icons/decrement = ExtResource("6_gwfr3")
theme_override_icons/decrement_highlight = ExtResource("6_gwfr3")
theme_override_icons/decrement_pressed = ExtResource("6_gwfr3")
theme_override_styles/scroll = SubResource("StyleBoxTexture_mlul8")
theme_override_styles/grabber = SubResource("StyleBoxTexture_l4elv")

[node name="Panel Imagens" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 362.0
offset_top = 30.0
offset_right = 547.0
offset_bottom = 162.0
texture = ExtResource("3_uth28")

[node name="Imagens" type="TextureRect" parent="Panel Imagens"]
layout_mode = 2
offset_left = 6.0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 69.0
texture = ExtResource("5_51ttw")
stretch_mode = 2

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
